MEM-34 MEM-16 Insert my POC localized, remove old tests.

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -1,7 +1,11 @@
 {
     "@@locale": "en",
-    "counterAppBarTitle": "Counter",
-    "@counterAppBarTitle": {
-        "description": "Text shown in the AppBar of the Counter Page"
+    "appTitle": "Memverse",
+    "@appTitle": {
+        "description": "Title of app"
+    },
+    "referenceTestAppBarTitle": "Reference Test",
+    "@referenceTestAppBarTitle": {
+        "description": "Text shown in the AppBar of the Reference Test Page"
     }
 }
