feat: Add login localization and update login button
This commit introduces the "Login" localization string, making the login button text translatable.

**Changes:**

*   **Localization:**
    *   Added the `login` string to `app_en.arb` and `app_es.arb` for English and Spanish respectively.
    *   Updated `app_localizations.dart`, `app_localizations_en.dart`, and `app_localizations_es.dart` to include the new `login` localization.
*   **Login Button:**
    *   Modified the login button in `login_page.dart` to use the `l10n.login` localization string, replacing the hardcoded "Login" text.
*   **Workflow:**
    * Updated concurrency settings for workflows.
    * Updated the min coverage number.
    * Updated coverage excludes.
    * updated uses actions checkout to v4
    * updated dynamic config extraction
*   **Windows Plugins:**
    * Update flutter secure storage windows plugin.
    * updated generated_plugins.cmake file.

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -59,5 +59,6 @@
   "hidePassword": "Hide password",
   "pleaseEnterYourPassword": "Please enter your password",
   "username": "Username",
-  "pleaseEnterYourUsername": "Please enter your username"
+  "pleaseEnterYourUsername": "Please enter your username",
+  "login": "Login"
 }
