add login page with username and password fields, including password … (#14)
* add login page with username and password fields, including password visibility toggle and validation, and update localization files and gitignore

* feat: Add login localization and update login button

This commit introduces the "Login" localization string, making the login button text translatable.

**Changes:**

*   **Localization:**
    *   Added the `login` string to `app_en.arb` and `app_es.arb` for English and Spanish respectively.
    *   Updated `app_localizations.dart`, `app_localizations_en.dart`, and `app_localizations_es.dart` to include the new `login` localization.
*   **Login Button:**
    *   Modified the login button in `login_page.dart` to use the `l10n.login` localization string, replacing the hardcoded "Login" text.
*   **Workflow:**
    * Updated concurrency settings for workflows.
    * Updated the min coverage number.
    * Updated coverage excludes.
    * updated uses actions checkout to v4
    * updated dynamic config extraction
*   **Windows Plugins:**
    * Update flutter secure storage windows plugin.
    * updated generated_plugins.cmake file.

* Update TODOs in main.yaml

Adds `(neiljaywarner)` to TODO comments in `main.yaml` to clarify ownership. Additionally, it adds specific files to the `coverage_excludes` in the analyze job: `lib/l10n/arb/app_localizations_es.dart`, `lib/l10n/arb/app_localizations_en.dart`, and `lib/l10n/arb/app_localizations.dart`.

* update tests and coverage configuration to improve code coverage and fix pipeline issues

* feat: Enhance test coverage, pipeline, and login page

This commit introduces several improvements to the project, including enhanced test coverage, pipeline optimizations, and enhancements to the login page.

**Key Changes:**

*   **Login Page Improvements:**
    *   Implemented password visibility toggle on the login screen using an eye icon.
    *   Added localized strings for password visibility features in En

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -53,5 +53,12 @@
   "noPreviousQuestions": "No previous questions yet",
   "referenceCannotBeEmpty": "Reference cannot be empty",
   "invalidBookName": "Invalid book name",
-  "formatShouldBeBookChapterVerse": "Format should be \"Book Chapter:Verse\""
+  "formatShouldBeBookChapterVerse": "Format should be \"Book Chapter:Verse\"",
+  "password": "Password",
+  "showPassword": "Show password",
+  "hidePassword": "Hide password",
+  "pleaseEnterYourPassword": "Please enter your password",
+  "username": "Username",
+  "pleaseEnterYourUsername": "Please enter your username",
+  "login": "Login"
 }
