Refactor: Centralize Theming and Improve Code Quality
This commit introduces a centralized theming system using `AppThemes` for light and dark modes, ensuring consistent UI across the application. It also includes several code quality improvements:

- **Theming:**
    - Created `AppThemes` class with light and dark `ThemeData`.
    - Defined color constants in `colors.dart` and theme-specific colors in `themes.dart`.
    - Applied the new themes in `app.dart`, ensuring `BetterFeedback` uses the correct theme based on platform brightness.
    - Updated `SignedInNavScaffold` to use theme colors and styles for the bottom navigation bar.
- **Code Quality & Refactoring:**
    - Replaced stateful `SignedInNavScaffold` with a `HookWidget` for simpler state management.
    - Utilized `const` constructors where possible for improved performance (e.g., `Verse` instances, `TextStyle`).
    - Added localization strings for navigation bar items (`Home`, `Verse`, `Ref`, `Settings`).
    - Improved `bootstrap.dart` to handle `CLIENT_ID` more robustly, including a 'debug' fallback for development.
    - Updated `analyticsServiceProvider` and `authServiceProvider` to use mock/logging services when `CLIENT_ID` is 'debug' or empty, facilitating local development and testing.
    - Updated `verseRepositoryProvider` to use `FakeVerseRepository` when `CLIENT_ID` is 'debug' or empty.
    - Corrected `main.dart` to consistently use the `App` widget as the entry point, ensuring theme propagation.
- **Miscellaneous:**
    - Added a `temporary_ditl.md` file for tracking theming debug steps.
    - Ensured `AuthService.clientSecret` correctly reads from environment variables.
    - Minor cleanups and formatting.

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -60,5 +60,9 @@
   "pleaseEnterYourPassword": "Please enter your password",
   "username": "Username",
   "pleaseEnterYourUsername": "Please enter your username",
-  "login": "Login"
+  "login": "Login",
+  "home": "Home",
+  "verse": "Verse",
+  "ref": "Ref",
+  "settings": "Settings"
 }
